--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Etch-A-Scetch</title>
   </head>
   <body>
-    <button>Clear</button>
+    <div id="header">Etch-A-Scetch</div>
+    <button>Clear | Reset</button>
     <div id="container"></div>
   </body>
 </html>
