added rainbow option

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <div id="header">Etch-A-Scetch</div>
     <button>Clear | Reset</button>
+    <div class="rainbow">
+      <input type="checkbox" id="rainbow" name="rainbow" />
+      <label>Rainbow</label>
+    </div>
     <div id="container"></div>
   </body>
 </html>
