added separate buttons for clear and reset

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <div id="header">Etch-A-Scetch</div>
-    <button>Clear | Reset</button>
+    <div class="button">
+      <button id="reset">Reset</button>
+      <button id="clear">clear</button>
+    </div>
     <div class="rainbow">
       <input type="checkbox" id="rainbow" name="rainbow" />
       <label>Rainbow</label>
