click and hover added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="header">Etch-A-Scetch</div>
+    <div class="instructions">Click and hover to draw</div>
     <div class="button">
       <button id="reset">Reset</button>
       <button id="clear">clear</button>
